[tool.poetry]
name = "rlops-plot"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [{include = "rlops_plot"}]

[tool.poetry.dependencies]
python = "^3.9"
expt = {git = "https://github.com/wookayin/expt.git"}
seaborn = "^0.12.1"
rich = "^12.6.0"
tabulate = "^0.9.0"
wandb = {git = "https://github.com/wandb/wandb.git", rev = "andrew/report-api-fixes"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
